feito alterações no pagamento

--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,8 +1,8 @@
-<% title "Edit Cliente" %>
+<% title "Editando o Cliente" %>
 
 <%= render 'form' %>
 
 <p>
-  <%= link_to "Show", @cliente %> |
-  <%= link_to "View All", clientes_path %>
+  <%= link_to "Ver o Cliente", @cliente %> |
+  <%= link_to "Ver Todos Clientes", clientes_path %>
 </p>
