--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,5 +1,5 @@
-<% title "New Cliente" %>
+<% title "Novo Cliente" %>
 
 <%= render 'form' %>
 
-<p><%= link_to "Back to List", clientes_path %></p>
+<p><%= link_to "Ver Todos Clientes", clientes_path %></p>
