--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,12 +1,26 @@
+<% content_for :head do %>
+  <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js' %>
+  <%= javascript_include_tag 'jquery.maskedinput-1.3.min.js' %>
+<% end %>
+
+<script type="text/javascript">
+  jQuery(function($) {
+    $.mask.definitions['~']='[+-]';
+    $('#date').mask('99/99/9999');
+    $('#cliente_telefone').mask('(99) 9999-9999');
+    $('#cliente_celular').mask('(99) 9999-9999');
+  });
+</script>
+
 <%= form_for @cliente do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :nome %><br />
-    <%= f.text_field :nome %>
+    <%= f.text_field :nome, :size => 50 %>
   </p>
   <p>
     <%= f.label :endereco %><br />
-    <%= f.text_field :endereco %>
+    <%= f.text_field :endereco, :size => 50 %>
   </p>
   <p>
     <%= f.label :telefone %><br />
