--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,6 +10,18 @@ a img {
 
 a {
     color: #0000FF;
+    font-size: 80%;
+}
+
+a:link, a:visited {
+    text-decoration: none
+}
+a:hover {
+    text-decoration: underline;
+    color: #f00
+}
+a:active {
+    text-decoration: none
 }
 
 .clear {
@@ -74,33 +86,13 @@ a {
     margin: 0;
 }
 
-#menu {
-    background: #333;
-    list-style: none;
-    width: 75%;
-    margin: 0 auto;
-    padding: 0px;
-
-}
-#menu li {
-    float: left;
-    font: 67.5% "Lucida Sans Unicode", "Bitstream Vera Sans", "Trebuchet Unicode MS", "Lucida Grande", Verdana, Helvetica, sans-serif;
-    margin: 0 auto;
-    padding: 0;
-}
-#menu a {
-    background: #333 url("seperator.gif") bottom right no-repeat;
-    color: #ccc;
-    display: block;
-    float: left;
-    margin: 0 auto;
-    padding: 8px 12px;
-    text-decoration: none;
-    font-weight:normal;
-}
-#menu a:hover {
-    background: #2580a2 url("hover.gif") bottom center no-repeat;
-    color: #fff;
-    padding-bottom: 8px;
+ul
+{
+    list-style-type: none;
 }
 
+.lista
+{   
+   
+   font: bold larger sans-serif;
+}
