--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -15,7 +15,7 @@
       </div>
       <%= link_to image_tag("profile.png"), cliente %>
       <%= link_to image_tag("trash.png"), cliente, :confirm => 'Tem certeza?', :method => :delete %> 
-      <%= link_to image_tag("visa.png"), cliente_pagamentos_path(cliente) %>
+      <%= link_to image_tag("paid.png"), cliente_pagamentos_path(cliente) %>
     </li>
     <br />
   <% end %>
