mudança para jquery

--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -20,6 +20,5 @@
 <p>
   <%= link_to "Editar", edit_cliente_path(@cliente) %> |
   <%= link_to "Excluir", @cliente, :confirm => 'Tem certeza?', :method => :delete %> |
-  <%= link_to "Ver Todos Clientes", clientes_path %> |
-  <%= link_to "Ver Pagamentos", cliente_pagamentos_path(@cliente) %>
+  <%= link_to "Ver Clientes", clientes_path %>
 </p>
