--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -7,18 +7,13 @@
   </p>
 <% end %>
 
-<ul>
+<table>
   <% for cliente in @clientes %>
-    <li>
-      <div class="lista">
-        <%= cliente.nome %>
-      </div>
-      <%= link_to image_tag("profile.png"), cliente %>
-      <%= link_to image_tag("trash.png"), cliente, :confirm => 'Tem certeza?', :method => :delete %> 
-      <%= link_to image_tag("paid.png"), cliente_pagamentos_path(cliente) %>
-    </li>
-    <br />
+    <tr>
+      <td><%= cliente.nome %></td>
+      <td><%= link_to image_tag("profile.png"), cliente %><%= link_to image_tag("paid.png"), cliente_pagamentos_path(cliente)%></td>
+    </tr>    
   <% end %>
-</ul>
+</table>
 
-<p><%= link_to "Novo Cliente", new_cliente_path %></p>
+<p><%= link_to "Novo Cliente", new_cliente_path %> | <%= link_to "Ver Pagamentos", '/list' %> </p>
