--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'jquery.maskedinput-1.3.min.js' %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
