--- a/app/views/pagamentos/show.html.erb
+++ b/app/views/pagamentos/show.html.erb
@@ -15,5 +15,5 @@
 <p>
   <%= link_to "Editar", edit_cliente_pagamento_path(@cliente, @pagamento) %> |
   <%= link_to "Excluir", [@cliente, @pagamento], :confirm => 'Tem certeza?', :method => :delete %> |
-  <%= link_to "Ver Todos Pagamentos", cliente_pagamentos_path(@cliente) %>
+  <%= link_to "Ver Pagamentos", cliente_pagamentos_path(@cliente) %>
 </p>
