--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,16 @@
     <%= javascript_include_tag 'jquery.maskedinput-1.3.min.js' %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
+    <% if logged_in? %>
+      Welcome <%= current_user.username %>! Not you?
+      <%= link_to "Log out", logout_path %>
+    <% else %>
+      <%= link_to "Sign up", signup_path %> or
+      <%= link_to "log in", login_path %>.
+    <% end %>
   </head>
   <body>
-      <div id="container">      
+    <div id="container">
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
