--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <%= link_to "Log out", logout_path %>
     <% else %>
       <%= link_to "Sign up", signup_path %> or
-      <%= link_to "log in", login_path %>.
+      <%= link_to "log in", login_path %>
     <% end %>
   </head>
   <body>
