foi colocado a parte de autenticação

--- a/app/views/pagamentos/search.html.erb
+++ b/app/views/pagamentos/search.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag '/search', :method => 'get' do %>
   <p>
-    <%= text_field_tag :data, params[:search] %>
+    <%= text_field_tag :datepicker, params[:search] %>
     <%= submit_tag "Procurar", :name => nil %>
   </p>
 <% end %>
