--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% title "Sign up" %>
+<% title "Cadastrar-se" %>
 
-<p>Already have an account? <%= link_to "Log in", login_path %>.</p>
+<p>J&aacute; tem uma conta? <%= link_to "Entrar", login_path %></p>
 
 <%= render 'form' %>
