--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,20 @@
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag 'jquery.maskedinput-1.3.min.js' %>
+    <%= javascript_include_tag 'jquery-ui-1.8.15.custom.min' %>
+    <%= javascript_include_tag 'jquery.ui.datepicker-pt-BR' %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
-    <% if logged_in? %>
-      Welcome <%= current_user.username %>! Not you?
-      <%= link_to "Log out", logout_path %>
-    <% else %>
-      <%= link_to "Sign up", signup_path %> or
-      <%= link_to "log in", login_path %>
-    <% end %>
   </head>
   <body>
     <div id="container">
+      <% if logged_in? %>
+        Bem-vindo <%= current_user.username %>! N&atilde;o &eacute; voc&ecirc;?
+        <%= link_to "Sair", logout_path %>
+      <% else %>
+        <%= link_to "Cadastrar-se", signup_path %> ou
+        <%= link_to "Entrar", login_path %>
+      <% end %>
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
