foi colocado o recibo

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -16,4 +16,4 @@
   <% end %>
 </table>
 
-<p><%= link_to "Novo Cliente", new_cliente_path %> | <%= link_to "Ver Pagamentos", '/list' %> </p>
+<p><%= link_to "Novo Cliente", new_cliente_path %> | <%= link_to "Pagamentos", list_path %> </p>
