--- a/app/views/pagamentos/index.html.erb
+++ b/app/views/pagamentos/index.html.erb
@@ -8,10 +8,10 @@
 <table>
   <% @cliente.pagamentos.each do |pagamento| %>
     <tr>
-      <td><%= l pagamento.data %></td>
-      <td ALIGN="right"><%= number_to_currency pagamento.valor, :format => "%u %n", :separator => ",", :delimiter => ".", :unit => "" %></td>
+      <td><%= l pagamento.data %>&nbsp;&nbsp;</td>
+      <td ALIGN="right"><%= number_to_currency pagamento.valor, :format => "%u %n", :separator => ",", :delimiter => ".", :unit => "" %>&nbsp;</td>
       <td>
-        <%= link_to image_tag("edit.png"), edit_cliente_pagamento_path(@cliente, pagamento) %>
+        <%= link_to image_tag("edit.png"), cliente_pagamento_path(@cliente, pagamento) %>
         <%= link_to image_tag("delete.png"), [@cliente, pagamento], :confirm => 'Tem certeza?', :method => :delete %>
       </td>
     </tr>
@@ -19,4 +19,4 @@
 </table>
 <br />
 <%= link_to 'Novo Pagamento', new_cliente_pagamento_path(@cliente) %> |
-<%= link_to 'Ver Clientes', clientes_path %>
+<%= link_to 'Clientes', clientes_path %>
