--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -21,5 +21,5 @@
   <%= link_to "Editar", edit_cliente_path(@cliente) %> |
   <%= link_to "Novo Cliente", new_cliente_path %> | 
   <%= link_to "Excluir", @cliente, :confirm => 'Tem certeza?', :method => :delete %> |
-  <%= link_to "Ver Clientes", clientes_path %>
+  <%= link_to "Voltar", clientes_path %>
 </p>
