--- a/app/views/clientes/list.html.erb
+++ b/app/views/clientes/list.html.erb
@@ -22,8 +22,7 @@
     </tr>
   <% end %>
 </table>
-
+<p><%= will_paginate @clientes, :previous_label => "Anterior", :next_label => "Pr&oacute;ximo" %>
 
 <br />
-<p><%= link_to "Voltar", clientes_path %> |
-  <%= link_to "Pagamentos por Dia", search_path %> </p>
+<p><%= link_to "Pagamentos por Dia", search_path %> | <%= link_to "Voltar", clientes_path %> </p>
