--- a/app/views/pagamentos/show.html.erb
+++ b/app/views/pagamentos/show.html.erb
@@ -9,7 +9,7 @@
 
 <p>
   <strong>Valor:</strong>
-  <%= number_to_currency @pagamento.valor %>
+  <%= number_to_currency @pagamento.valor, :format => "%u %n", :separator => ",", :delimiter => ".", :unit => "" %>
 </p>
 
 <p>
