--- a/app/views/pagamentos/search.html.erb
+++ b/app/views/pagamentos/search.html.erb
@@ -1,4 +1,4 @@
-<% title "Pagamentos por Dia" %>
+<% title "Pagamentos" %>
 
 <%= form_tag '/search', :method => 'get' do %>
   <p>
@@ -20,4 +20,4 @@
   </table>
   <br />
 <% end %>
-<%= link_to "Voltar", list_path %>
+<%= link_to "Voltar", clientes_path %>
